moves security module from core to web